--- a/git/常用命令.md
+++ b/git/常用命令.md
@@ -26,6 +26,13 @@ git reset --hard origin/master
 git pull
 ```
 
+## diff
+
+```bash
+# 暂存区 diff
+git diff --cached xxx
+```
+
 ## rebase
 
 ```bash
