修改：shell 常用脚本片段

--- a/shell/常用脚本片段.md
+++ b/shell/常用脚本片段.md
@@ -7,3 +7,9 @@ if [ $? -ne 0 ]; then
     echo "failed"
 fi
 ```
+
+替换 HTML 中的特殊字符
+
+```bash
+sed 's/&/\&amp;/g; s/</\&lt;/g; s/>/\&gt;/g; s/"/\&quot;/g; s/'"'"'/\&#39;/g'
+```
