修改：Maven 编译期常量替换

--- a/maven/编译器常量替换.md
+++ b/maven/编译器常量替换.md
@@ -2,7 +2,9 @@
 
 ## 背景
 
-Java 代码中注解的属性值，需要根据不同环境使用不同的值，由于注解中的属性值必须是 final 的常量，因此没法通过任何运行时的手段赋值或修改（例如：property 注入等）
+Java 中运行时变量赋值或修改很灵活，有很多方式可以实现（例如：property 注入等），但有些情况必须要在编译期替换（类似 C 语言的预编译宏）就稍微麻烦点，例如下面这个场景：
+
+注解的属性值需要根据不同环境使用不同的值，由于注解中的属性值必须是 final 的常量，因此没法通过任何运行时的手段赋值或修改
 
 ```java
 @Table(name = "xxx") // 希望 dev 环境使用 "offline"、prod 环境使用 "online"
