修改：Git 常用命令

--- a/git/常用命令.md
+++ b/git/常用命令.md
@@ -48,7 +48,10 @@ git rebase -i --root # rebase 到第一个版本
 git branch -vv
 
 # 修改本地分支的 upstream
-git branch --set-upstream git_issue origin/sql_git_commit_issue
+# 旧版本 Git
+git branch --set-upstream your_branch_name origin/your_branch_name
+# 新版本 Git
+git branch --set-upstream-to=origin/your_branch_name your_branch_name
 ```
 
 ## stash
