修改：shell 常用脚本片段

--- a/shell/常用脚本片段.md
+++ b/shell/常用脚本片段.md
@@ -8,6 +8,14 @@ if [ $? -ne 0 ]; then
 fi
 ```
 
+判断输入参数
+
+```bash
+if [ $# -gt 0 ];then
+    echo "arg[1]: $1"
+fi
+```
+
 替换 HTML 中的特殊字符
 
 ```bash
