修改：MySQL 账号授权

--- a/mysql/账号授权.md
+++ b/mysql/账号授权.md
@@ -1,7 +1,38 @@
 # 账号授权
 
-## 检查账号当前权限
+## 用户管理
 
-```bash
-show grants for {MYSQL_ACCOUNT};
+```sql
+-- 添加账号
+CREATE USER 'qa' identified by 'd17cbdd785468dffa05a4aa1727efb33';
+-- 删除账号
+DROP USER 'qa';
+```
+
+## 授权
+
+```sql
+-- 授权所有 ip，所有数据库
+GRANT ALL PRIVILEGES ON *.* TO 'qa'@'%' IDENTIFIED BY 'd17cbdd785468dffa05a4aa1727efb33';
+-- 授权 localhost，所有数据库
+GRANT ALL PRIVILEGES ON *.* TO 'qa'@'localhost' IDENTIFIED BY 'd17cbdd785468dffa05a4aa1727efb33';
+-- 授权只读给 scheuler_repl 库的所有表
+GRANT SELECT ON executor_debug.* TO 'qa'@'%' IDENTIFIED BY 'd17cbdd785468dffa05a4aa1727efb33';
+
+-- 吊销全部权限
+REVOKE ALL FROM 'qa'@'%';
+-- 吊销查询权限
+REVOKE SELECT ON scheduler_repl.* FROM 'qa'@'%';
+
+-- 刷新权限
+FLUSH PRIVILEGES;
+```
+
+## 权限查询
+
+```sql
+-- 查询全部用户
+SELECT DISTINCT CONCAT('User: ''',user,'''@''',host,''';') AS query FROM mysql.user;
+-- 查询指定用户
+SHOW GRANTS FOR 'qa'@'%';
 ```
